--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,7 @@
 @import "sass/base/base";
+
+@import "sass/components/btn";
 @import "sass/components/navigation";
+
+
 @import "sass/layout/header";
