--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,7 +6,11 @@
 
 body{
   box-sizing: border-box;
-  font-size: 16px; //1rem =  16px
+  font-size: 12px; //1rem =  12px
+
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
   background-color: #C8D8CE;
 }
 
