--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,15 @@
 .header{
+
+  height: 5rem;
+  padding: 4rem .5rem;
+
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
+
+
+  &__logo{
+    flex: 0 0 25%;
+  }
 
 }
