--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,13 @@
 @import "sass/base/base";
+@import "sass/base/typography";
+@import "sass/base/utilities";
 
 @import "sass/components/btn";
 @import "sass/components/navigation";
 
 
 @import "sass/layout/header";
+
+@import "sass/pages/home";
+
+
