--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,37 @@ body {
   background-color: #C8D8CE; }
 
 .container {
-  width: 90%;
-  height: 400px;
-  background-color: #fff;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto; }
+  height: auto;
+  background-color: #fff; }
+
+.t1 {
+  font-family: 'Nunito', sans-serif;
+  color: #17015d;
+  font-size: 2.4rem;
+  font-weight: 800;
+  line-height: 1.3; }
+  .t1 span {
+    display: inline-block; }
+
+.t2 {
+  font-family: 'Nunito', sans-serif;
+  color: #17015d;
+  font-size: 2rem; }
+
+.t3 {
+  color: #17015d;
+  font-size: 1.2rem; }
+
+.t4 {
+  color: #909090;
+  font-size: 1.1rem; }
+
+.s1 {
+  color: #909090;
+  font-size: .9rem; }
+
+.u-text-center {
+  text-align: center; }
 
 .btn {
   text-transform: uppercase;
@@ -32,23 +57,28 @@ body {
   position: relative;
   overflow: hidden;
   outline: none;
-  transition: all .3s ease-in-out; }
+  transition: all .3s ease-out; }
   .btn::before {
     content: "";
     position: absolute;
-    left: -4rem;
-    top: 0;
-    width: 4rem;
-    height: 3rem;
-    transform: skewX(-20deg);
-    box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.2);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    opacity: 0;
     background-color: rgba(255, 255, 255, 0.2);
     transition: all .3s ease-in-out; }
   .btn:hover, .btn:active {
-    transform: scale(1.1); }
+    transform: scaleX(1.1); }
     .btn:hover::before, .btn:active::before {
-      transform: translateX(12rem);
-      border: none; }
+      transform: scale(12);
+      opacity: 1; }
+  .btn--big {
+    padding: 1rem 3rem;
+    font-size: .9rem;
+    letter-spacing: 1px; }
 
 .nav {
   flex: 0 0 55%; }
@@ -65,7 +95,7 @@ body {
       left: 0;
       bottom: 0;
       width: 0;
-      height: 2px;
+      height: 3px;
       background-color: #3dbe71;
       transition: all .2s ease-in; }
     .nav__link:visited, .nav__link:link {
@@ -86,3 +116,57 @@ body {
   align-items: center; }
   .header__logo {
     flex: 0 0 25%; }
+
+.info {
+  height: 39rem;
+  padding: 4rem 5rem 0 5rem;
+  display: flex; }
+  .info__left {
+    flex: 0 0 50%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start; }
+  .info__right {
+    flex: 0 0 50%;
+    display: flex;
+    justify-content: center; }
+  .info__img {
+    width: 90%;
+    height: 90%; }
+
+.features {
+  padding: 4rem 5rem;
+  height: 50rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; }
+  .features__content {
+    height: 32rem;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; }
+  .features__texts {
+    width: 70%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; }
+  .features__feature {
+    height: 14rem;
+    width: 27%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; }
+  .features__img {
+    width: 2.5rem;
+    height: 2.5rem;
+    fill: #3dbe71; }
+
+.workflow {
+  height: 35rem;
+  background-image: linear-gradient(to right, rgba(116, 236, 166, 0.9) 0%, rgba(255, 255, 255, 0.3) 100%), url("../imgs/bg-workflow.jpg");
+  background-size: cover; }
