--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,10 +15,8 @@ body{
 }
 
 .container{
-  width:90%;
-  height: 400px;
+
+  height:auto;
   background-color: #fff;
-  margin-top:10px;
-  margin-left: auto;
-  margin-right: auto;
+
 }
