--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,8 @@
-.u-text-center{
-  text-align: center;
+.u-float-right{
+  float: right !important;
 }
+
+.u-text-align-right{
+  text-align: right !important;
+}
+
