--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,19 @@
   padding: 0;
   box-sizing: inherit; }
 
+html {
+  font-size: 100%; }
+
 body {
   box-sizing: border-box;
-  font-size: 12px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
-  line-height: 1.5;
-  background-color: #C8D8CE; }
+  line-height: 1.5; }
 
 .container {
-  height: auto;
-  background-color: #fff; }
+  background-color: #fff;
+  display: flex;
+  flex-direction: column; }
 
 .t1 {
   font-family: 'Nunito', sans-serif;
@@ -34,15 +36,18 @@ body {
   font-size: 1.2rem; }
 
 .t4 {
-  color: #909090;
+  color: #504f4f;
   font-size: 1.1rem; }
 
 .s1 {
   color: #909090;
   font-size: .9rem; }
 
-.u-text-center {
-  text-align: center; }
+.u-float-right {
+  float: right !important; }
+
+.u-text-align-right {
+  text-align: right !important; }
 
 .btn {
   text-transform: uppercase;
@@ -79,6 +84,31 @@ body {
     padding: 1rem 3rem;
     font-size: .9rem;
     letter-spacing: 1px; }
+
+.counter {
+  padding: 3rem 1rem;
+  width: 22%;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+  border: 2px solid #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 14rem; }
+  .counter__svg {
+    width: 3rem;
+    height: 3rem;
+    fill: white; }
+  .counter__num {
+    font-family: 'Nunito', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 200;
+    color: white;
+    letter-spacing: -2px; }
+  .counter__p {
+    font-family: 'Nunito', sans-serif;
+    letter-spacing: 1px;
+    color: white; }
 
 .nav {
   flex: 0 0 55%; }
@@ -117,56 +147,136 @@ body {
   .header__logo {
     flex: 0 0 25%; }
 
-.info {
+.sec-info {
   height: 39rem;
-  padding: 4rem 5rem 0 5rem;
+  padding: 4rem 6rem 0 6rem;
   display: flex; }
-  .info__left {
+  .sec-info__left {
     flex: 0 0 50%;
-    height: 70%;
+    height: 65%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start; }
-  .info__right {
+  .sec-info__right {
     flex: 0 0 50%;
     display: flex;
     justify-content: center; }
-  .info__img {
+  .sec-info__img {
     width: 90%;
     height: 90%; }
 
-.features {
-  padding: 4rem 5rem;
+.sec-features {
+  padding: 4rem 6rem;
   height: 50rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center; }
-  .features__content {
+  .sec-features__content {
     height: 32rem;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap; }
-  .features__texts {
+  .sec-features__texts {
     width: 70%;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-around; }
-  .features__feature {
-    height: 14rem;
+  .sec-features__feature {
+    height: 12rem;
     width: 27%;
+    text-align: justify;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center; }
-  .features__img {
+  .sec-features__img {
     width: 2.5rem;
     height: 2.5rem;
     fill: #3dbe71; }
 
 .workflow {
-  height: 35rem;
-  background-image: linear-gradient(to right, rgba(116, 236, 166, 0.9) 0%, rgba(255, 255, 255, 0.3) 100%), url("../imgs/bg-workflow.jpg");
-  background-size: cover; }
+  height: 68rem;
+  background-color: #e3f5eb;
+  padding: 4rem 0 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; }
+  .workflow__top {
+    height: 5rem;
+    width: 70%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
+  .workflow__content {
+    flex: 0 0 85%;
+    display: flex; }
+  .workflow__box {
+    height: 10rem;
+    width: 80%; }
+  .workflow__left {
+    flex: 0 0 48%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end; }
+  .workflow__line-box {
+    flex: 1 0 1%;
+    height: 100%;
+    display: flex;
+    justify-content: center; }
+  .workflow__line {
+    width: 4px;
+    background-color: #e3a396;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; }
+  .workflow__circle {
+    width: 1.3rem;
+    height: 1.3rem;
+    border-radius: 50%;
+    background-color: #e3a396; }
+  .workflow__right {
+    flex: 0 0 48%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; }
+  .workflow__heading {
+    color: #17015d;
+    font-size: 1.2rem;
+    margin-bottom: .5rem;
+    letter-spacing: 1px; }
+  .workflow__text {
+    font-size: .9rem; }
+  .workflow__img {
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+    border: 4px solid #e3a396;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    float: left;
+    shape-outside: circle(50%);
+    margin: 0 1rem; }
+
+.sec-counter {
+  height: 40rem;
+  padding: 3rem 6rem;
+  background-image: linear-gradient(to right, rgba(227, 163, 150, 0.8), rgba(227, 163, 150, 0.7)), url("../../imgs/bg.jpg");
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; }
+  .sec-counter__top {
+    width: 70%;
+    text-align: center; }
+  .sec-counter__bottom {
+    width: 80%;
+    flex: 0 0 40%;
+    display: flex;
+    justify-content: space-between; }
