--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,20 +3,22 @@
   padding: 0;
   box-sizing: inherit;
 }
-
+html{
+  font-size: 100%; //1rem =  16px
+}
 body{
+
   box-sizing: border-box;
-  font-size: 12px; //1rem =  12px
 
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  background-color: #C8D8CE;
+
 }
 
 .container{
-
-  height:auto;
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
 
 }
