--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "sass/base/utilities";
 
 @import "sass/components/btn";
+@import "sass/components/counter";
 @import "sass/components/navigation";
 
 
