--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,15 +1,13 @@
-.info{
+.sec-info{
   height: 39rem;
-  padding: 4rem 5rem 0 5rem;
-
-
+  padding: 4rem 6rem 0 6rem;
 
   display: flex;
 
 
   &__left{
     flex: 0 0 50%;
-    height: 70%;
+    height: 65%;
 
 
     display: flex;
@@ -20,7 +18,6 @@
 
   &__right{
     flex: 0 0 50%;
-
 
     display: flex;
     justify-content: center;
@@ -36,8 +33,8 @@
 
 }
 
-.features{
-   padding: 4rem 5rem ;
+.sec-features{
+   padding: 4rem 6rem ;
    height: 50rem;
 
 
@@ -68,8 +65,9 @@
   }
 
   &__feature{
-    height: 14rem;
+    height: 12rem;
     width: 27%;
+    text-align: justify;
 
 
     display: flex;
@@ -86,12 +84,124 @@
 }
 
 .workflow{
-  height: 35rem;
+  height: 68rem;
+  background-color: #e3f5eb;
+  padding: 4rem 0 2rem 0;
 
-  background-image: linear-gradient(to right,
-rgba(#74eca6, .9) 0%,
-rgba(#fff, .3) 100%),
-  url("../imgs/bg-workflow.jpg");
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items:center;
+
+  &__top{
+    height: 5rem;
+    width: 70%;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  &__content{
+    flex: 0 0 85%;
+    display: flex;
+  }
+
+  &__box{
+    height: 10rem;
+    width: 80%;
+
+  }
+
+  &__left{
+    flex: 0 0 48%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  &__line-box{
+    flex: 1 0 1%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+
+  }
+
+  &__line{
+    width: 4px;
+    background-color: #e3a396;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+  }
+
+  &__circle{
+    width: 1.3rem;
+    height:1.3rem;
+    border-radius: 50%;
+    background-color: #e3a396;
+  }
+  &__right{
+    flex: 0 0 48%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+  }
+
+  &__heading{
+    color: #17015d;
+    font-size: 1.2rem;
+    margin-bottom: .5rem;
+    letter-spacing: 1px;
+
+  }
+  &__text{
+    font-size:.9rem;
+  }
+
+  &__img{
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+    border: 4px solid #e3a396;
+    box-shadow: 2px 2px 5px rgba(0,0,0,.4);
+    float: left;
+    shape-outside: circle(50%);
+    margin: 0 1rem;
+  }
+
+}
+
+.sec-counter{
+  height: 40rem;
+  padding: 3rem 6rem;
+  background-image:linear-gradient(to right,rgba(227, 163, 150,.8),rgba(227, 163, 150,.7)),url("../../imgs/bg.jpg");
   background-size: cover;
 
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  &__top{
+    width: 70%;
+    text-align: center;
+  }
+  &__bottom{
+    width: 80%;
+    flex: 0 0 40%;
+
+    display: flex;
+    justify-content: space-between;
+  }
 }
