--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,11 +3,13 @@
 @import "sass/base/utilities";
 
 @import "sass/components/btn";
+@import "sass/components/card";
 @import "sass/components/counter";
 @import "sass/components/navigation";
 
 
 @import "sass/layout/header";
+@import "sass/layout/footer";
 
 @import "sass/pages/home";
 
