--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 
 @import "sass/components/btn";
 @import "sass/components/card";
+@import "sass/components/comment";
 @import "sass/components/counter";
 @import "sass/components/navigation";
 
