--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -18,6 +18,7 @@
     transition: all .2s ease-in;
 
     span{
+
       position: absolute;
       left: 50%;
       top:50%;
@@ -43,6 +44,7 @@
     span {
       opacity: 0;
 
+
       &:last-child{
         top:50%;
         transform: translate(-50%,-50%);
@@ -54,8 +56,13 @@
 
   }
 
-  &--big{
+  &--middle{
     padding: 1.5rem 7rem;
+    font-size: .9rem;
+  }
+
+  &--big{
+    padding: 2rem 8rem;
     font-size: .9rem;
   }
 
