--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "sass/components/card";
 @import "sass/components/comment";
 @import "sass/components/counter";
+@import "sass/components/social-nav";
 @import "sass/components/navigation";
 
 
