--- a/sass/components/_comment.scss
+++ b/sass/components/_comment.scss
@@ -21,6 +21,8 @@
 
     &::before{
       content: url("../../imgs/left-quote.png");
+      opacity: .4;
+
       transform: scale(.7);
       position: absolute;
 
