--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,11 @@ html {
   font-size: 100%; }
 
 body {
+  position: relative;
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.5; }
-
-.container {
-  background-color: #fff;
-  display: flex;
-  flex-direction: column; }
 
 .t1 {
   font-family: 'Nunito', sans-serif;
@@ -266,8 +262,69 @@ body {
     letter-spacing: 1px;
     color: white; }
 
+.form {
+  height: 35rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center; }
+  .form__input {
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.1rem;
+    width: 80%;
+    padding: .5rem 1rem;
+    border: 1px solid #3dbe71; }
+    .form__input::placeholder {
+      font-weight: 200; }
+  .form__message {
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.1rem;
+    width: 80%;
+    padding: 1rem 3rem;
+    border: 1px solid #3dbe71; }
+
+.search-box__form {
+  position: relative; }
+
+.search-box__input {
+  display: block;
+  width: 0;
+  opacity: 0;
+  font-size: .9rem;
+  font-weight: 300;
+  border: 0;
+  padding: .5rem 1rem; }
+  .search-box__input:focus {
+    outline: none; }
+  .search-box__input::placeholder {
+    color: black; }
+
+.search-box__button {
+  display: block;
+  position: absolute;
+  left: 95%;
+  top: 60%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: all .3s; }
+
+.search-box__svg {
+  width: 1.2rem;
+  height: 1.2rem;
+  fill: #3dbe71; }
+
+.search-box__checkbox {
+  display: none; }
+
+.search-box__checkbox:checked ~ .search-box__input {
+  width: 100%;
+  opacity: 1;
+  outline: 1px solid #3dbe71; }
+
+.search-box__checkbox:checked + .search-box__button {
+  left: 0; }
+
 .social-nav {
-  padding-top: .5rem;
   height: 50%;
   display: flex;
   flex-direction: column; }
@@ -280,18 +337,27 @@ body {
     display: flex;
     text-decoration: none;
     padding: .5rem;
-    border-radius: 50%;
-    border: 2px solid #3dbe71;
     transition: all .2s ease-in; }
-  .social-nav__link:active, .social-nav__link:hover {
-    background-color: #3dbe71;
-    border: 2px solid #1b1b1b; }
-    .social-nav__link:active svg, .social-nav__link:hover svg {
-      fill: white; }
+  .social-nav__link:active svg, .social-nav__link:hover svg {
+    fill: #17015d; }
   .social-nav__icon {
-    width: 1.2rem;
-    height: 1.2rem;
-    fill: #3dbe71; }
+    width: 1rem;
+    height: 1rem;
+    fill: #82b395; }
+  .social-nav--big {
+    padding-top: .5rem; }
+    .social-nav--big .social-nav__link, .social-nav--big .social-nav__link:link, .social-nav--big .social-nav__link:visited {
+      border-radius: 50%;
+      border: 2px solid #3dbe71; }
+    .social-nav--big .social-nav__link:active, .social-nav--big .social-nav__link:hover {
+      background-color: #3dbe71;
+      border: 2px solid #1b1b1b; }
+      .social-nav--big .social-nav__link:active svg, .social-nav--big .social-nav__link:hover svg {
+        fill: white; }
+    .social-nav--big .social-nav__icon {
+      width: 1.2rem;
+      height: 1.2rem;
+      fill: #3dbe71; }
 
 .nav {
   flex: 0 0 55%; }
@@ -322,11 +388,20 @@ body {
       width: 100%; }
 
 .header {
-  height: 5rem;
-  padding: 4rem .5rem;
+  height: 8rem;
+  padding: 0 .5rem;
+  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center; }
+  .header__social-search {
+    width: 10rem;
+    position: absolute;
+    right: 10%;
+    top: 2%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
   .header__logo {
     flex: 0 0 25%; }
 
@@ -427,6 +502,35 @@ body {
     font-size: .9rem;
     font-weight: 600;
     color: #716e6e; }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; }
+
+.contactus {
+  align-self: center;
+  width: 80%;
+  height: 40rem;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .contactus__left {
+    flex: 0 0 60%;
+    height: 90%; }
+  .contactus__right {
+    flex: 0 0 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .contactus__right img {
+      width: 30rem;
+      height: 30rem; }
+
+.container {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column; }
 
 .sec-info {
   height: 39rem;
