--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,6 +7,7 @@ html{
   font-size: 100%; //1rem =  16px
 }
 body{
+  position: relative;
 
   box-sizing: border-box;
 
@@ -16,9 +17,3 @@ body{
 
 }
 
-.container{
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-
-}
