--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,19 @@ body {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
+  color: #504f4f;
   line-height: 1.5; }
+
+@keyframes anim-info {
+  0% {
+    opacity: 0;
+    transform: scale(0.75); }
+  65% {
+    opacity: 1;
+    transform: scale(1.1); }
+  100% {
+    opacity: 1;
+    transform: scale(1); } }
 
 .t1 {
   font-family: 'Nunito', sans-serif;
@@ -30,6 +42,8 @@ body {
   .t2--white {
     color: #fff;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.4); }
+  .t2--green {
+    color: #3dbe71; }
 
 .t3 {
   color: #17015d;
@@ -54,7 +68,7 @@ body {
   text-transform: uppercase;
   border-radius: 5rem;
   background-color: #3dbe71;
-  color: #fff;
+  color: #ffffff;
   border: none;
   font-size: .7rem;
   letter-spacing: 1px;
@@ -89,14 +103,18 @@ body {
     padding: 2rem 8rem;
     font-size: .9rem; }
   .btn--pink {
-    background-color: rgba(238, 66, 102, 0.7); }
+    background-color: rgba(238, 66, 102, 0.8); }
+    .btn--pink:hover {
+      background-color: rgba(238, 66, 102, 0.6); }
   .btn--purple {
-    background-color: rgba(84, 13, 110, 0.7); }
+    background-color: rgba(84, 13, 110, 0.8); }
+    .btn--purple:hover {
+      background-color: rgba(84, 13, 110, 0.6); }
 
 .card {
   height: 80%;
   width: 30%;
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0 2rem 2.5rem rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   display: flex;
@@ -126,10 +144,10 @@ body {
   .card__img {
     width: 4rem;
     height: 4rem;
-    fill: #fff; }
+    fill: #ffffff; }
   .card__texts {
     line-height: 1;
-    color: #fff;
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -179,7 +197,7 @@ body {
       right: 11%;
       top: 35%;
       z-index: 10;
-      color: #fff;
+      color: #ffffff;
       font-weight: 300;
       font-size: .9rem;
       text-align: center;
@@ -191,6 +209,34 @@ body {
 
 .card--purple {
   background-image: linear-gradient(to right bottom, rgba(84, 13, 110, 0.8), rgba(83, 45, 97, 0.6)); }
+
+.comp-contact-info__logo {
+  width: 14rem; }
+
+.comp-contact-info__list {
+  list-style: none;
+  color: #909090;
+  font-weight: 300;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start; }
+
+.comp-contact-info__item {
+  padding-left: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center; }
+  .comp-contact-info__item svg {
+    margin-right: .5rem; }
+  .comp-contact-info__item img {
+    width: 10rem; }
+
+.comp-contact-info__icon {
+  width: 1rem;
+  height: 1rem;
+  fill: #3dbe71; }
 
 .comment {
   width: 20%;
@@ -226,7 +272,7 @@ body {
     font-weight: 600;
     letter-spacing: 1px;
     text-align: justify;
-    color: #676666; }
+    color: rgba(80, 79, 79, 0.7); }
   .comment__name {
     display: block;
     font-family: 'Nunito', sans-serif;
@@ -255,74 +301,46 @@ body {
     font-family: 'Nunito', sans-serif;
     font-size: 2.5rem;
     font-weight: 200;
-    color: white;
+    color: #ffffff;
     letter-spacing: -2px; }
   .counter__p {
     font-family: 'Nunito', sans-serif;
     letter-spacing: 1px;
-    color: white; }
+    color: #ffffff; }
 
 .form {
-  height: 35rem;
+  height: 30rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center; }
+  align-items: center;
+  /*
+  &__input{
+    @include input;
+  }
+
+
+  &__message{
+    @include input{
+      resize: none;
+    };
+
+  }
+  */ }
   .form__input {
     font-family: 'Nunito', sans-serif;
     font-size: 1.1rem;
     width: 80%;
-    padding: .5rem 1rem;
+    padding: .8rem 1rem;
     border: 1px solid #3dbe71; }
-    .form__input::placeholder {
+    .form__input:focus {
+      outline: 2px solid #3dbe71;
+      border: none; }
+    .form__input::-webkit-input-placeholder {
       font-weight: 200; }
   .form__message {
-    font-family: 'Nunito', sans-serif;
-    font-size: 1.1rem;
-    width: 80%;
-    padding: 1rem 3rem;
-    border: 1px solid #3dbe71; }
-
-.search-box__form {
-  position: relative; }
-
-.search-box__input {
-  display: block;
-  width: 0;
-  opacity: 0;
-  font-size: .9rem;
-  font-weight: 300;
-  border: 0;
-  padding: .5rem 1rem; }
-  .search-box__input:focus {
-    outline: none; }
-  .search-box__input::placeholder {
-    color: black; }
-
-.search-box__button {
-  display: block;
-  position: absolute;
-  left: 95%;
-  top: 60%;
-  transform: translateY(-50%);
-  cursor: pointer;
-  transition: all .3s; }
-
-.search-box__svg {
-  width: 1.2rem;
-  height: 1.2rem;
-  fill: #3dbe71; }
-
-.search-box__checkbox {
-  display: none; }
-
-.search-box__checkbox:checked ~ .search-box__input {
-  width: 100%;
-  opacity: 1;
-  outline: 1px solid #3dbe71; }
-
-.search-box__checkbox:checked + .search-box__button {
-  left: 0; }
+    resize: none; }
 
 .social-nav {
   height: 50%;
@@ -343,7 +361,7 @@ body {
   .social-nav__icon {
     width: 1rem;
     height: 1rem;
-    fill: #82b395; }
+    fill: rgba(93, 179, 128, 0.8); }
   .social-nav--big {
     padding-top: .5rem; }
     .social-nav--big .social-nav__link, .social-nav--big .social-nav__link:link, .social-nav--big .social-nav__link:visited {
@@ -351,9 +369,9 @@ body {
       border: 2px solid #3dbe71; }
     .social-nav--big .social-nav__link:active, .social-nav--big .social-nav__link:hover {
       background-color: #3dbe71;
-      border: 2px solid #1b1b1b; }
+      border: 2px solid rgba(23, 1, 93, 0.7); }
       .social-nav--big .social-nav__link:active svg, .social-nav--big .social-nav__link:hover svg {
-        fill: white; }
+        fill: #ffffff; }
     .social-nav--big .social-nav__icon {
       width: 1.2rem;
       height: 1.2rem;
@@ -379,12 +397,12 @@ body {
       transition: all .2s ease-in; }
     .nav__link:visited, .nav__link:link {
       font-size: .8rem;
-      color: #504b72;
+      color: rgba(0, 0, 0, 0.7);
       text-decoration: none;
       text-transform: uppercase;
       font-weight: 600;
       padding: .5rem .8em; }
-    .nav__link:hover::after, .nav__linkactive::after {
+    .nav__link:hover::after, .nav__link:active::after {
       width: 100%; }
 
 .header {
@@ -407,14 +425,14 @@ body {
 
 .footer {
   background-color: #ececec;
-  height: 27rem;
+  height: 25rem;
   box-shadow: 3px 3px 10px 7px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center; }
   .footer__top {
-    flex: 0 0 80%;
+    flex: 0 0 85%;
     width: 100%;
     padding: 0 2rem;
     display: flex;
@@ -427,30 +445,6 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start; }
-  .footer__logo {
-    width: 14rem; }
-  .footer__company-info-list {
-    list-style: none;
-    color: #8e8e8e;
-    font-weight: 300;
-    height: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start; }
-  .footer__company-info-item {
-    padding-left: 1rem;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center; }
-    .footer__company-info-item svg {
-      margin-right: .5rem; }
-    .footer__company-info-item img {
-      width: 10rem; }
-  .footer__icon {
-    width: 1rem;
-    height: 1rem;
-    fill: #3dbe71; }
   .footer__top-right {
     flex: 0 0 55%;
     height: 70%;
@@ -460,9 +454,9 @@ body {
     flex: 1;
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    background-color: #63C48A; }
+    background-color: #5db380; }
   .footer__container {
     width: 100%; }
     .footer__container:last-child {
@@ -499,9 +493,17 @@ body {
       transform: scale(0.4); }
   .footer__link, .footer__link:link, .footer__link:visited {
     text-decoration: none;
-    font-size: .9rem;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    font-weight: 300;
+    color: #909090; }
+  .footer__link:hover, .footer__link:active, .footer__link:focus {
+    color: #3dbe71; }
+  .footer__copyright {
+    color: rgba(255, 255, 255, 0.8);
     font-weight: 600;
-    color: #716e6e; }
+    font-size: .8rem;
+    letter-spacing: 1px; }
 
 .container {
   display: flex;
@@ -511,24 +513,24 @@ body {
 .contactus {
   align-self: center;
   width: 80%;
-  height: 40rem;
+  height: calc(100vh - 8rem);
   display: flex;
   justify-content: center;
   align-items: center; }
   .contactus__left {
     flex: 0 0 60%;
-    height: 90%; }
+    height: 90%;
+    display: flex;
+    align-items: flex-start; }
   .contactus__right {
     flex: 0 0 40%;
+    height: 90%;
     display: flex;
-    justify-content: center;
-    align-items: center; }
-    .contactus__right img {
-      width: 30rem;
-      height: 30rem; }
+    flex-direction: column;
+    justify-content: flex-start; }
 
 .container {
-  background-color: #fff;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column; }
 
@@ -536,14 +538,6 @@ body {
   height: 39rem;
   padding: 4rem 6rem 0 6rem;
   display: flex; }
-
-@keyframes anim-info {
-  from {
-    opacity: 0;
-    transform: scale(0.75); }
-  to {
-    opacity: 1;
-    transform: scale(1); } }
   .sec-info__left {
     flex: 0 0 50%;
     height: 65%;
@@ -551,9 +545,9 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    animation: anim-info .2s ease-in; }
+    animation: anim-info .4s ease-out; }
   .sec-info__right {
-    animation: anim-info .2s ease-in;
+    animation: anim-info .4s ease-out;
     flex: 0 0 50%;
     display: flex;
     justify-content: center; }
@@ -661,7 +655,7 @@ body {
 .sec-counter {
   height: 40rem;
   padding: 3rem 6rem;
-  background-image: linear-gradient(to right, rgba(227, 163, 150, 0.8), rgba(227, 163, 150, 0.7)), url("../../imgs/bg.jpg");
+  background-image: linear-gradient(to bottom, rgba(227, 163, 150, 0.5), rgba(227, 163, 150, 0.4)), url("../../imgs/bg.jpg");
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -693,7 +687,7 @@ body {
 
 .sec-idea {
   height: 35rem;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("../../imgs/comment-org1.jpg");
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.5)), url("../../imgs/sec-idea-bg.jpg");
   background-size: cover;
   background-attachment: fixed;
   display: flex;
@@ -708,9 +702,9 @@ body {
     letter-spacing: 2px; }
 
 .sec-comment {
-  height: 50rem;
-  padding: 4rem 5rem 4rem 5rem;
-  background-image: linear-gradient(to bottom, rgba(144, 144, 144, 0.6), rgba(144, 144, 144, 0.6)), url("../../imgs/comment-bg.jpg");
+  height: 40rem;
+  padding: 4rem 5rem;
+  background-color: rgba(180, 187, 189, 0.7);
   background-size: cover;
   display: flex;
   flex-direction: column;
