--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 .t1{
   font-family: 'Nunito', sans-serif;;
-  color: #17015d ;
+  color: $color-secondary ;
   font-size: 2.4rem;
   font-weight: 800;
   line-height: 1.3;
@@ -15,28 +15,33 @@
 
 .t2{
   font-family: 'Nunito', sans-serif;;
-  color: #17015d ;
+  color: $color-secondary ;
   font-size: 2rem;
 
   &--white{
     color:#fff;
-    text-shadow: 2px 2px rgba(#000,.4);
+    text-shadow: 2px 2px rgba($color-black,.4);
+  }
+
+  &--green{
+    color:$color-primary;
+
   }
 
 }
 
 .t3{
-  color: #17015d ;
+  color: $color-secondary ;
   font-size: 1.2rem;
 }
 
 .t4{
-  color: #504f4f ;
+  color: $color-font-1 ;
   font-size: 1.1rem;
 }
 
 
 .s1{
-  color: #909090 ;
+  color: $color-font-2;
   font-size: .9rem;
 }
