--- a/sass/components/_comment.scss
+++ b/sass/components/_comment.scss
@@ -4,10 +4,6 @@
   height: 21rem;
 
 
-
-
-
-
   position: relative;
 
   &__content{
@@ -15,7 +11,7 @@
     padding: 4rem 1rem;
 
 
-    background-color: rgba(#fff,.9);
+    background-color: rgba($color-white,.9);
     clip-path: polygon(0 0, 100% 10%, 100% 90%, 25% 95%,0 75%);
 
 
@@ -34,13 +30,13 @@
   }
 
   &__content-shadow{
-    filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+    filter: drop-shadow(-1px 6px 3px rgba(#323200, 0.5));
   }
   &__img{
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
-    box-shadow: -4px 3px 4px 3px rgba(#000,.3);
+    box-shadow: -4px 3px 4px 3px rgba($color-black,.3);
 
     position: absolute;
     right: 5%;
@@ -57,7 +53,8 @@
     font-weight: 600;
     letter-spacing: 1px;
     text-align: justify;
-    color:#676666;
+    color: rgba($color-font-1,.7);
+    // color:#676666;
 
   }
 
