--- a/sass/components/_counter.scss
+++ b/sass/components/_counter.scss
@@ -24,13 +24,13 @@
     font-size: 2.5rem;
     font-weight: 200;
 
-    color:white;
+    color:$color-white;
     letter-spacing: -2px;
   }
   &__p{
     font-family: 'Nunito', sans-serif;
     letter-spacing: 1px;
-    color:white;
+    color:$color-white;
 
 
   }
