--- a/sass/pages/_contactus.scss
+++ b/sass/pages/_contactus.scss
@@ -7,8 +7,8 @@
 .contactus{
   align-self: center;
   width: 80%;
- // height: calc(100vh - 7rem);
-  height: 40rem;
+  height: calc(100vh - 8rem);
+  //height: 40rem;
 
 
   //background-color: red;
@@ -22,22 +22,23 @@
   &__left{
     flex:0 0 60%;
     height:90%;
+
+    display: flex;
+    align-items: flex-start;
     //background-color: yellow;
   }
   &__right{
     flex:0 0 40%;
+    height: 90%;
+
 
 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
     //background-color: #3dbe71;
 
 
-    img{
-      width: 30rem;
-      height: 30rem;
-    }
   }
 
 }
