--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .container{
-  background-color: #fff;
+  background-color: $color-white;
   display: flex;
   flex-direction: column;
 
@@ -12,16 +12,7 @@
   padding: 4rem 6rem 0 6rem;
 
   display: flex;
-  @keyframes anim-info {
-    from{
-      opacity: 0;
-      transform: scale(.75);
-    }
-    to{
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
+
 
   &__left{
     flex: 0 0 50%;
@@ -32,14 +23,14 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    animation: anim-info .2s ease-in;
+    animation: anim-info .4s ease-out;
 
     
 
   }
 
   &__right{
-    animation: anim-info .2s ease-in;
+    animation: anim-info .4s ease-out;
 
     flex: 0 0 50%;
 
@@ -103,7 +94,7 @@
   &__img{
     width: 2.5rem;
     height: 2.5rem;
-    fill: #3dbe71;
+    fill: $color-primary;
   }
 }
 
@@ -157,7 +148,7 @@
 
   &__line{
     width: 4px;
-    background-color: #e3a396;
+    background-color: $color-tertiary;
 
     display: flex;
     flex-direction: column;
@@ -170,7 +161,7 @@
     width: 1.3rem;
     height:1.3rem;
     border-radius: 50%;
-    background-color: #e3a396;
+    background-color: $color-tertiary;
   }
   &__right{
     flex: 0 0 48%;
@@ -182,7 +173,7 @@
   }
 
   &__heading{
-    color: #17015d;
+    color: $color-secondary;
     font-size: 1.2rem;
     margin-bottom: .5rem;
     letter-spacing: 1px;
@@ -196,8 +187,8 @@
     width: 7rem;
     height: 7rem;
     border-radius: 50%;
-    border: 4px solid #e3a396;
-    box-shadow: 2px 2px 5px rgba(0,0,0,.4);
+    border: 4px solid $color-tertiary;
+    box-shadow: 2px 2px 5px rgba($color-black,.4);
     float: left;
     shape-outside: circle(50%);
     margin: 0 1rem;
@@ -208,7 +199,7 @@
 .sec-counter{
   height: 40rem;
   padding: 3rem 6rem;
-  background-image:linear-gradient(to right,rgba(227, 163, 150,.8),rgba(227, 163, 150,.7)),url("../../imgs/bg.jpg");
+  background-image:linear-gradient(to bottom,rgba($color-tertiary,.5),rgba($color-tertiary,.4)),url("../../imgs/bg.jpg");
   background-size: cover;
 
 
@@ -259,7 +250,7 @@
   height: 35rem;
 
 
-  background-image: linear-gradient(to bottom ,rgba(#fff,.4),rgba(#fff,.4 )), url("../../imgs/comment-org1.jpg") ;
+  background-image: linear-gradient(to bottom ,rgba($color-white,.6),rgba($color-white,.5)), url("../../imgs/sec-idea-bg.jpg") ;
   background-size: cover;
   background-attachment: fixed;
 
@@ -281,11 +272,12 @@
 }
 
 .sec-comment{
-  height: 50rem;
-  padding: 4rem 5rem 4rem 5rem;
+  height: 40rem;
+  padding: 4rem 5rem;
 
 
-  background-image: linear-gradient(to bottom ,rgba(#909090,.6),rgba(#909090,.6 )), url("../../imgs/comment-bg.jpg");
+ // background-image: linear-gradient(to bottom ,rgba(#b4bbbd,.6),rgba(#b4bbbd,.4)), url("../../imgs/grey-bg-2.jpg");
+  background-color: rgba(#b4bbbd,.7);
   background-size: cover;
 
 
@@ -294,8 +286,8 @@
   justify-content: center;
 
   &__top{
-    flex:0 0 20%;
 
+    flex: 0 0 20%;
 
     display: flex;
     flex-direction: column;
@@ -305,6 +297,7 @@
   }
   &__bottom{
     flex: 0 0 80%;
+    //background-color: orange;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
