--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 
 html {
   font-size: 100%; }
+  @media only screen and (max-width: 1000px) {
+    html {
+      font-size: 90%; } }
 
 body {
   position: relative;
@@ -29,11 +32,14 @@ body {
 .t1 {
   font-family: 'Nunito', sans-serif;
   color: #17015d;
-  font-size: 2.4rem;
+  font-size: 2.3rem;
   font-weight: 800;
   line-height: 1.3; }
   .t1 span {
     display: inline-block; }
+  @media only screen and (max-width: 1000px) {
+    .t1 {
+      font-size: 2rem; } }
 
 .t2 {
   font-family: 'Nunito', sans-serif;
@@ -44,10 +50,16 @@ body {
     text-shadow: 2px 2px rgba(0, 0, 0, 0.4); }
   .t2--green {
     color: #3dbe71; }
+  @media only screen and (max-width: 1000px) {
+    .t2 {
+      font-size: 1.5rem; } }
 
 .t3 {
   color: #17015d;
   font-size: 1.2rem; }
+  @media only screen and (max-width: 1000px) {
+    .t3 {
+      font-size: 1rem; } }
 
 .t4 {
   color: #504f4f;
@@ -377,16 +389,65 @@ body {
       height: 1.2rem;
       fill: #3dbe71; }
 
-.nav {
-  flex: 0 0 55%; }
-  .nav__list {
+.navigation {
+  position: relative;
+  flex-basis: 90%;
+  display: flex;
+  justify-content: flex-end; }
+  @media only screen and (max-width: 1000px) {
+    .navigation {
+      flex: 1; } }
+  .navigation__checkbox {
+    display: none; }
+  .navigation__button {
+    visibility: hidden;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    border-radius: 2px;
+    background-color: #3dbe71;
+    padding: 4px;
+    height: 1.8rem;
+    width: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; }
+    @media only screen and (max-width: 768px) {
+      .navigation__button {
+        visibility: visible; } }
+  .navigation__icon {
+    display: block;
+    width: 1.4rem;
+    height: 2.5px;
+    background-color: #ffffff; }
+  .navigation__nav {
+    list-style: none;
+    width: 75%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    @media only screen and (max-width: 1000px) {
+      .navigation__nav {
+        width: 80%; } }
+    @media only screen and (max-width: 768px) {
+      .navigation__nav {
+        display: none; } }
+  .navigation__list {
+    flex: 0 0 80%;
     list-style: none;
     display: flex;
-    justify-content: space-around; }
-  .nav__link {
+    justify-content: space-around;
+    align-items: center; }
+    @media only screen and (max-width: 1000px) {
+      .navigation__list {
+        justify-content: space-between; } }
+  .navigation__link {
     transition: all 1s;
     position: relative; }
-    .nav__link::after {
+    .navigation__link::after {
       content: "";
       position: absolute;
       left: 0;
@@ -395,19 +456,17 @@ body {
       height: 3px;
       background-color: #3dbe71;
       transition: all .2s ease-in; }
-    .nav__link:visited, .nav__link:link {
+    .navigation__link:visited, .navigation__link:link {
       font-size: .8rem;
       color: rgba(0, 0, 0, 0.7);
       text-decoration: none;
       text-transform: uppercase;
-      font-weight: 600;
-      padding: .5rem .8em; }
-    .nav__link:hover::after, .nav__link:active::after {
+      font-weight: 600; }
+    .navigation__link:hover::after, .navigation__link:active::after {
       width: 100%; }
 
 .header {
-  height: 8rem;
-  padding: 0 .5rem;
+  min-height: 8rem;
   position: relative;
   display: flex;
   justify-content: space-around;
@@ -421,7 +480,18 @@ body {
     justify-content: space-between;
     align-items: center; }
   .header__logo {
-    flex: 0 0 25%; }
+    position: absolute;
+    left: 15%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center; }
+    @media only screen and (max-width: 1000px) {
+      .header__logo {
+        left: 10%; } }
+    @media only screen and (max-width: 768px) {
+      .header__logo {
+        left: 15%; } }
 
 .footer {
   background-color: #ececec;
@@ -446,10 +516,10 @@ body {
     justify-content: flex-start;
     align-items: flex-start; }
   .footer__top-right {
-    flex: 0 0 55%;
+    flex: 0 0 50%;
     height: 70%;
     display: flex;
-    justify-content: space-around; }
+    justify-content: space-between; }
   .footer__bottom {
     flex: 1;
     width: 100%;
@@ -462,7 +532,7 @@ body {
     .footer__container:last-child {
       flex: 0 0 35%; }
   .footer__header {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
     line-height: 1.5;
@@ -493,7 +563,6 @@ body {
       transform: scale(0.4); }
   .footer__link, .footer__link:link, .footer__link:visited {
     text-decoration: none;
-    font-size: 1rem;
     letter-spacing: 1px;
     font-weight: 300;
     color: #909090; }
@@ -536,7 +605,7 @@ body {
 
 .sec-info {
   height: 39rem;
-  padding: 4rem 6rem 0 6rem;
+  padding: 4rem 6rem 1rem 6rem;
   display: flex; }
   .sec-info__left {
     flex: 0 0 50%;
@@ -550,7 +619,8 @@ body {
     animation: anim-info .4s ease-out;
     flex: 0 0 50%;
     display: flex;
-    justify-content: center; }
+    justify-content: center;
+    align-items: flex-start; }
   .sec-info__img {
     width: 90%;
     height: 90%; }
@@ -563,10 +633,15 @@ body {
   justify-content: space-between;
   align-items: center; }
   .sec-features__content {
+    width: 90%;
     height: 32rem;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap; }
+    @media only screen and (max-width: 1000px) {
+      .sec-features__content {
+        width: 100%;
+        justify-content: space-around; } }
   .sec-features__texts {
     width: 70%;
     text-align: center;
@@ -574,16 +649,19 @@ body {
     flex-direction: column;
     justify-content: space-around; }
   .sec-features__feature {
-    height: 12rem;
+    height: 13rem;
     width: 27%;
     text-align: justify;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center; }
+    .sec-features__feature h2 {
+      flex: 0 0 20%;
+      white-space: nowrap; }
   .sec-features__img {
+    flex: 0 0 20%;
     width: 2.5rem;
-    height: 2.5rem;
     fill: #3dbe71; }
 
 .workflow {
