--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,6 +5,13 @@
 }
 html{
   font-size: 100%; //1rem =  16px
+
+  @media only screen and (max-width: 1000px) {
+    font-size: 90%;
+  }
+
+
+
 }
 body{
   position: relative;
