--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,7 @@
 .t1{
   font-family: 'Nunito', sans-serif;;
   color: $color-secondary ;
-  font-size: 2.4rem;
+  font-size: 2.3rem;
   font-weight: 800;
   line-height: 1.3;
 
@@ -9,6 +9,10 @@
     display: inline-block;
   }
 
+  @media only screen and (max-width: 1000px) {
+
+    font-size: 2rem;
+  }
 
 
 }
@@ -28,11 +32,20 @@
 
   }
 
+  @media only screen and (max-width: 1000px) {
+
+    font-size: 1.5rem;
+  }
+
 }
 
 .t3{
   color: $color-secondary ;
   font-size: 1.2rem;
+
+  @media only screen and (max-width: 1000px) {
+    font-size: 1rem;
+  }
 }
 
 .t4{
