--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,9 @@
 .header{
 
-  height: 8rem;
-  padding: 0 .5rem;
-  //background-color: orange;
+  min-height: 8rem;
+
+
+  //background-color: blue;
 
   position:relative;
 
@@ -27,7 +28,23 @@
 
 
   &__logo{
-    flex: 0 0 25%;
+   // background-color: purple;
+    position: absolute;
+    left: 15%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+
+    display: flex;
+    align-items: center;
+
+    @media only screen and (max-width: 1000px) {
+      left: 10%;
+    }
+
+    @media only screen and (max-width: 768px) {
+      left: 15%;
+    }
+
   }
 
 
