--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,7 +9,7 @@
 .sec-info{
   height: 39rem;
 //  height: calc(100vh - 9rem);
-  padding: 4rem 6rem 0 6rem;
+  padding: 4rem 6rem 1rem 6rem;
 
   display: flex;
 
@@ -32,10 +32,12 @@
   &__right{
     animation: anim-info .4s ease-out;
 
+
     flex: 0 0 50%;
 
     display: flex;
     justify-content: center;
+    align-items: flex-start;
   }
 
   &__img{
@@ -52,19 +54,25 @@
    padding: 4rem 6rem ;
    height: 50rem;
 
-
-
-
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
 
+
+
   &__content{
+    //background-color: orange;
+    width: 90%;
     height: 32rem;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+
+    @media only screen and (max-width: 1000px) {
+      width: 100%;
+      justify-content: space-around;
+    }
 
   }
 
@@ -80,20 +88,29 @@
   }
 
   &__feature{
-    height: 12rem;
+    height: 13rem;
     width: 27%;
     text-align: justify;
+   // background-color: red;
 
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+
+    h2{
+      flex:0 0 20%;
+      white-space: nowrap; // tek satır olsun. sonradan eklenecek
+    }
+
   }
 
   &__img{
+    flex:0 0 20%;
+
     width: 2.5rem;
-    height: 2.5rem;
+    //height: 2.5rem; başta eklenecek sonradan kalıdırılacak   sayfayı küçültünce ikonlar küçüldüğü için height yerine flex uygulandı
     fill: $color-primary;
   }
 }
@@ -119,6 +136,7 @@
   }
 
   &__content{
+
     flex: 0 0 85%;
     display: flex;
   }
